--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.database=postgresql
+
+healthchecker.timeout=2000
