--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,8 +1,11 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/healthchecker
+spring.datasource.url=jdbc:postgresql://localhost:5432/admin
 spring.datasource.username=postgres
 spring.datasource.password=root
 
 spring.jpa.show-sql=true
 spring.thymeleaf.cache=false
 
+notifier.service.url=http://valverde.usermd.net:9080
+notifier.service.username=valverde
+notifier.service.password=valverde
 application.url=http://localhost:8080
