--- a/src/main/resources/application-pro.properties
+++ b/src/main/resources/application-pro.properties
@@ -6,4 +6,7 @@ spring.datasource.minIdle=2
 spring.datasource.initialSize=5
 spring.datasource.removeAbandoned=true
 
+notifier.service.url=http://valverde.usermd.net:9080
+notifier.service.username=${NOTIFIER_SERVICE_USERNAME}
+notifier.service.password=${NOTIFIER_SERVICE_PASSWORD}
 application.url=https://valverde-administrator.herokuapp.com
