--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.profiles.active=pro
 spring.datasource.url=jdbc:postgresql://localhost:5432/healthchecker
 spring.datasource.username=postgres
 spring.datasource.password=root
